Firebase Firestore funcionando como CRUD en proyect

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
+
+
+
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -29,6 +33,9 @@ android {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:34.6.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
 
     implementation libs.appcompat
     implementation libs.material
